[gd_scene load_steps=15 format=2]

[ext_resource path="res://Art/boatvv2.png" type="Texture" id=1]
[ext_resource path="res://Art/pl03.png" type="Texture" id=2]
[ext_resource path="res://Art/pl05.png" type="Texture" id=3]
[ext_resource path="res://Art/pl02.png" type="Texture" id=4]
[ext_resource path="res://Art/pl07.png" type="Texture" id=5]
[ext_resource path="res://Art/pl01.png" type="Texture" id=6]
[ext_resource path="res://Art/pl04.png" type="Texture" id=7]
[ext_resource path="res://Art/pl06.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=9]
[ext_resource path="res://Art/pl08.png" type="Texture" id=10]
[ext_resource path="res://Art/row.png" type="Texture" id=11]
[ext_resource path="res://Art/bait.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": false,
"name": "row",
"speed": 9.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 9 )

[node name="boat" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 1 )

[node name="rowing" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 16, 0 )
frames = SubResource( 1 )
animation = "row"

[node name="standing" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 10 )
offset = Vector2( -14, 0 )

[node name="rod" type="Sprite" parent="standing"]
position = Vector2( -52.6977, 1 )
rotation = 0.0349066
scale = Vector2( 1.33555, 1 )
texture = ExtResource( 11 )

[node name="fishingRod" type="Position2D" parent="standing"]
position = Vector2( -70, 1.98774e-07 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
rotation = 3.14159
build_mode = 1
polygon = PoolVector2Array( -13.665, -21.3364, 20.2761, -21.3364, 47.4997, -16.3866, 63.7632, -6.48712, 64.1167, 9.77633, 48.2068, 18.2616, 29.4685, 22.8578, -14.0186, 24.272, -30.282, 21.09, -64.2231, 3.05882, -63.8696, -1.18382, -28.5142, -18.1544 )

[node name="leftRow" type="Timer" parent="."]
one_shot = true

[node name="rightRow" type="Timer" parent="."]
one_shot = true

[node name="bait" type="Area2D" parent="."]
z_index = -1

[node name="Sprite" type="Sprite" parent="bait"]
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bait"]
shape = SubResource( 2 )
[connection signal="animation_finished" from="rowing" to="." method="_on_rowing_animation_finished"]
